--- a/modlist.html
+++ b/modlist.html
@@ -13,6 +13,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-chat-reports">No Chat Reports (by Aizistral)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-mineshafts-neoforge">YUNG's Better Mineshafts (NeoForge) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/bridging-mod">Bridging Mod (by CG360)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/harvest-with-ease">Harvest with ease (by CrystalSpider)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-chests">Iron Chests (by ProgWML6)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs">KubeJS (by LatvianModder)</a></li>
@@ -34,13 +35,15 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/terrablender-neoforge">TerraBlender (NeoForge) (by TheAdubbz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/trashslot">TrashSlot (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/connectivity">Connectivity[Forge/Fabric] (by someaddon)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/connectivity">Connectivity (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/prickle">Prickle (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-dragon-eggs">More Dragon Eggs (by Darkere)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-forge">FTB Library (Forge) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/notes">Notes (by Chaosyr)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/crate-delight-forge">Crate Delight (Forge & Neoforge) (by axperty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/supermartijn642s-core-lib">SuperMartijn642's Core Lib (by SuperMartijn642)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/clientsort">Client Sort (by NotRyken)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/clientsort">Client Sort (by NotRyken)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/craftpresence">CraftPresence (by CDAGaming_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/supermartijn642s-config-lib">SuperMartijn642's Config Lib (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-teams-forge">FTB Teams (Forge) (by FTB)</a></li>
@@ -52,12 +55,13 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cupboard">Cupboard (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/controlling">Controlling (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xp-tome">XP Tome (by bl4ckscor3)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/coroutil">CoroUtil (by Corosus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fastworkbench">FastWorkbench (by Shadows_of_Fire)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/coroutil">CoroUtil (by Corosus)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/allthecompressed">AllTheCompressed (by Pdiddy973)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/architectury-api">Architectury API (Fabric/Forge/NeoForge) (by shedaniel)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/unilib">UniLib (by CDAGaming_)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/searchables">Searchables (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ai-improvements">AI Improvements (by QueenOfMissiles)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/searchables">Searchables (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fastfurnace">FastFurnace (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
@@ -67,4 +71,5 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/netherportalfix">NetherPortalFix (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-dungeons-neoforge">YUNG's Better Dungeons (NeoForge) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gravestone-mod">GraveStone Mod (by henkelmax)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/yacl">YetAnotherConfigLib (by isXander)</a></li>
 </ul>
