--- a/modlist.html
+++ b/modlist.html
@@ -4,6 +4,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cobweb">Cobweb (by CrystalSpider)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ferritecore">FerriteCore ((Neo)Forge) (by malte0811)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-api-neoforge">YUNG's API (NeoForge) (by YUNGNICKYOUNG)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-chunk-loading-forge-fabric">Better chunk loading[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rhino">Rhino (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/puzzles-lib">Puzzles Lib [Forge & Fabric] (by Fuzs)</a></li>
@@ -11,6 +12,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/glitchcore">GlitchCore (by TheAdubbz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extreme-sound-muffler">Extreme sound muffler - (Neo)Forge (by LeoBeliik)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-chat-reports">No Chat Reports (by Aizistral)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/entityculling">Entity Culling Fabric/Forge (by tr7zw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-mineshafts-neoforge">YUNG's Better Mineshafts (NeoForge) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bridging-mod">Bridging Mod (by CG360)</a></li>
@@ -50,6 +52,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-ranks-forge">FTB Ranks (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-backups-2">FTB Backups 2 (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/placebo">Placebo (by Shadows_of_Fire)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-ping-display">Better Ping Display (by Quintinity)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-xmod-compat">FTB XMod Compat (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ultimine-addition">FTB Ultimine Addition (Forge/NeoForge/Fabric) (by ixDarkLorD)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cupboard">Cupboard (by someaddon)</a></li>
