Add new mods to modpack
- GeckoLib
- Season's Greetings
- Tom's Trading Network

--- a/modlist.html
+++ b/modlist.html
@@ -2,6 +2,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-chunks-forge">FTB Chunks (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crash-utilities">Crash Utilities (by Darkere)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cobweb">Cobweb (by CrystalSpider)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/seasons-greetings">Season's Greetings (by Starfish_Studios)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ferritecore">FerriteCore ((Neo)Forge) (by malte0811)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-api-neoforge">YUNG's API (NeoForge) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-chunk-loading-forge-fabric">Better chunk loading[Forge/Fabric] (by someaddon)</a></li>
@@ -17,6 +18,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bridging-mod">Bridging Mod (by CG360)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/harvest-with-ease">Harvest with ease (by CrystalSpider)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/toms-trading-network">Tom's Trading Network (by tom54541)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-chests">Iron Chests (by ProgWML6)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs">KubeJS (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modernfix">ModernFix (by embeddedt)</a></li>
@@ -49,6 +51,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/craftpresence">CraftPresence (by CDAGaming_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/supermartijn642s-config-lib">SuperMartijn642's Config Lib (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-teams-forge">FTB Teams (Forge) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by Gecko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-ranks-forge">FTB Ranks (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-backups-2">FTB Backups 2 (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/placebo">Placebo (by Shadows_of_Fire)</a></li>
